@@ -56,7 +56,7 @@
 @c applies to and all the info about who's publishing this edition
 
 @c These apply across the board.
-@set UPDATE-MONTH Luglio 2020
+@set UPDATE-MONTH Agosto 2020
 @set VERSION 5.1
 @set PATCHLEVEL 0
 
@@ -31161,6 +31161,14 @@ l'oggetto di una ridirezione non @`e uno scalare, viene messo tra parentesi.
 davanti alle regole @code{BEGIN} ed @code{END},
 alle regole @code{BEGINFILE} ed @code{ENDFILE},
 alle regole criterio_di_ricerca--azione e alle funzioni.
+
+@item
+Le funzioni sono elencate in ordine alfabetico.  Per prime sono elencate
+in ordine alfabetico le funzioni che appartengono allo spazio-dei-nomi
+@code{awk}.  Poi sono elencate le funzioni contenute negli altri
+spazi-dei-nomi.  Ogni spazio-dei-nomi è elencato in ordine alfabetico
+e le funzioni in esso contenute sono anch'esse elencate in ordine
+alfabetico.
 
 @end itemize
 
