@@ -1,3 +1,7 @@
+2020-08-16         Antonio Giovanni Colombo   <azc100@gmail.com>
+
+	* gawktexi.in: Updated.
+
 2020-07-29         Antonio Giovanni Colombo   <azc100@gmail.com>
 
 	* compila_originale.sh: fixed permission.
